syntax = "proto3";

package project.planton.provider.digitalocean.digitaloceandatabasecluster.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/digitalocean/digitaloceandatabasecluster/v1/spec.proto";
import "project/planton/provider/digitalocean/digitaloceandatabasecluster/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

// digital-ocean-database-cluster
message DigitalOceanDatabaseCluster {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'digital-ocean.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'DigitalOceanDatabaseCluster'];

  //metadata
  project.planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  DigitalOceanDatabaseClusterSpec spec = 4 [(buf.validate.field).required = true];

  //status
  DigitalOceanDatabaseClusterStatus status = 5;
}

// digital-ocean-database-cluster status
message DigitalOceanDatabaseClusterStatus {
  //stack-outputs
  //  digital-ocean-database-cluster stack-outputs
  DigitalOceanDatabaseClusterStackOutputs outputs = 1;
}
